--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="jquery.js"></script>
-    <script src="data_generator.js"></script>
-  </head>
-  <body>
-    <script>
 
-      $(document).ready(function(){
-        var $body = $('body');
-        $body.html('');
+<head>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="jquery.js"></script>
+  <script src="data_generator.js"></script>
+</head>
 
-        var index = streams.home.length - 1;
-        while(index >= 0){
-          var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
-          index -= 1;
-        }
 
-      });
+<body>
+  <br>
+  <h1>Twittler</h1>
+  <h2>by Alex Vincent-Hill and Hack Reactor</h2>
+  <br>
+  <script src="main.js"></script>
+</body>
 
-    </script>
-  </body>
 </html>
