--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 
 <body>
   <br>
-  <h1>Twittler</h1>
-  <h2>by Alex Vincent-Hill and Hack Reactor</h2>
+
   <br>
+  <div class="tweetsWrapper">
+    <div>Twittler by
+      <a href="https://github.com/avincenthill"> Alex Vincent-Hill </a> and Hack Reactor
+    </div>
+  </div>
   <script src="main.js"></script>
 </body>
 
