Add moment.js and make timeline functionality work

--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html>
 
 <head>
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
   <link rel="stylesheet" type="text/css" href="main.css">
   <script src="jquery.js"></script>
+  <script src="moment.js"></script>
   <script src="data_generator.js"></script>
+  <script src="main.js"></script>
+
 </head>
 
 
 <body>
   <br>
-
   <br>
-  <div class="tweetsWrapper">
-    <div>Twittler by
-      <a href="https://github.com/avincenthill"> Alex Vincent-Hill </a> and Hack Reactor
-    </div>
+  <div class="header">Twittler by Alex Vincent-Hill and Hack Reactor
   </div>
-  <script src="main.js"></script>
+  <div class="tweetsWrapper">
+  </div>
 </body>
 
 </html>
